--- a/mlvision/Podfile
+++ b/mlvision/Podfile
@@ -11,7 +11,7 @@ pod 'Firebase/MLVisionBarcodeModel'
 pod 'Firebase/MLVisionFaceModel'
 pod 'Firebase/MLVisionLabelModel'
 pod 'Firebase/MLVisionTextModel'
-
+pod 'emojidataios'
 target 'MLVisionExample' do
 end
 
